tests/negative/computed_storage_event_leak.ora
// Negative: opaque storage capabilities must not cross ABI/log boundaries.
contract BadComputedStorageEventLeak {
    log Bad(slot: StorageSlot);
}
